# kada-gpt

./: .env  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  requirements.txt  test.txt
back-end/: README.md  compose.dev.yml  compose.yml  prod.env.sample
back-end/fastapi/: .bash_history  .gitconfig  .python_history  Dockerfile  README.md  gunicorn.config.py  pyproject.toml  test.txt  test2.txt
back-end/fastapi/.local/share/virtualenv/wheel/3.11/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
back-end/fastapi/.local/share/virtualenv/wheel/3.11/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
back-end/fastapi/.local/share/virtualenv/wheel/3.11/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
back-end/fastapi/api/: db.py  main.py  migrate_all.py  migrate_db.py  vs.py
back-end/fastapi/api/cruds/: collection.py  groups.py  threads.py  users.py
back-end/fastapi/api/models/: groups.py  model.py  qdrant.py  threads.py  users.py
back-end/fastapi/api/module/: answer_create.py  answer_prompt.py  document_reader.py  document_search.py  history.py  llm.py  local_llm.py  model_select.py  oepn_ai.py  pdf_reader.py  preprocessing.py  related_select.py  search.py  select.py  template.py  vector_db.py
back-end/fastapi/api/routers/: collections.py  groups.py  threads.py  users.py
back-end/fastapi/api/schemas/: collections.py  groups.py  threads.py  users.py
back-end/fastapi/scripts/: account_create.py  collection_create.py  pdf_uploads.py
back-end/fastapi/tests/: api_test.py  chat_test.py  file_upload.py  qdrant_main.py  test.txt  test_main.py
doc/: manual.md
front-end/: .env.dev  .env.sample  Dockerfile  Dockerfile.dev  README.md  compose.dev.yml  compose.yml
jupyterlab/: Dockerfile  requirements.txt
workspace/: DocumentsDB.ipynb  Preprocessing.ipynb  Untitled.ipynb  app.ipynb  chain.ipynb  dev.ipynb  env_test.ipynb  internet_search.ipynb  kadaGPT_michi.ipynb  lamaindex.ipynb  prompt.ipynb  (+5 more)
(+106 files in other folders)
